fixing cursor alignment, minor visual changes

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,17 +1,16 @@
-html {
-    height: 100%;
-}
-
 body {
-    height: 100%;
-    width: 100%;
+    height: calc(100vh - 50px);
+    width: calc(100vw - 50px);
     margin: 0;
+    padding: 25px;
+    background: rgba(80, 80, 80, 1);
 }
 
 #partyzone {
     background: rgba(0, 80, 128, 1);
     background: linear-gradient(0deg, rgba(0, 80, 128, 1) 0%, rgba(0, 96, 128, 1) 20%, rgba(0, 128, 128, 1) 100%);
-    min-height: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 #cursorparty-heading {
@@ -30,9 +29,4 @@ body {
     font-family: Helvetica, sans-serif;
     text-decoration: underline;
     cursor: pointer;
-}
-
-.cursor {
-    filter: brightness(50%);
-    position: absolute;
 }
